# DroidVR

./: LICENSE-COMMERCIAL.md  LICENSE.md  README.md
DroidVR_PCB/: ArduinoProMicro.kicad_sch  DroidVR_PCB.kicad_pcb  DroidVR_PCB.kicad_prl  DroidVR_PCB.kicad_pro  DroidVR_PCB.kicad_sch  LedConnect.kicad_sch  LevelShifter.kicad_sch  MPU.kicad_sch  PowerSystem.kicad_sch  nRF.kicad_sch
EasyDroidVR_PCB/: ArduinoProMicro.kicad_sch  Connections.kicad_sch  EasyDroidVR_PCB-B_Cu.gbr  EasyDroidVR_PCB-B_Cu.ps  EasyDroidVR_PCB-B_Mask.gbr  EasyDroidVR_PCB-B_Mask.ps  EasyDroidVR_PCB-B_Paste.gbr  EasyDroidVR_PCB-B_Paste.ps  EasyDroidVR_PCB-B_Silkscreen.gbr  EasyDroidVR_PCB-B_Silkscreen.ps  EasyDroidVR_PCB-Edge_Cuts.gbr  EasyDroidVR_PCB-Edge_Cuts.ps  EasyDroidVR_PCB-F_Cu.gbr  EasyDroidVR_PCB-F_Cu.ps  EasyDroidVR_PCB-F_Mask.gbr  EasyDroidVR_PCB-F_Mask.ps  EasyDroidVR_PCB-F_Paste.gbr  EasyDroidVR_PCB-F_Paste.ps  EasyDroidVR_PCB-F_Silkscreen.gbr  EasyDroidVR_PCB-F_Silkscreen.ps  EasyDroidVR_PCB-job.gbrjob  EasyDroidVR_PCB.kicad_pcb  EasyDroidVR_PCB.kicad_prl  EasyDroidVR_PCB.kicad_pro  EasyDroidVR_PCB.kicad_sch  EasyDroidVR_PCB.step  HID.kicad_sch  (+12 more)
Firmware/vr_controller/steamvr_driver/: CMakeLists.txt
Firmware/vr_controller/steamvr_driver/diyvr/: driver.vrdrivermanifest
Firmware/vr_controller/steamvr_driver/diyvr/resources/input/: controller_profile.json
Firmware/vr_controller/steamvr_driver/diyvr/resources/settings/: default.vrsettings
Firmware/vr_controller/steamvr_driver/src/: Read.txt  driver_diyvr.cpp
Firmware/vr_controller/steamvr_driver/src/Beta/: driver_diyvr.cpp
(+22 files in other folders)
